// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`textAreaField > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  cursor: pointer;
}

.emotion-4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-6 {
  width: 100%;
  resize: vertical;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border-radius: 0.25rem;
  padding: 0.75rem 0.5rem 0.75rem 1rem;
  padding-right: calc(1.5rem + 0px + 0px);
}

.emotion-6::-webkit-input-placeholder {
  color: #727683;
}

.emotion-6::-moz-placeholder {
  color: #727683;
}

.emotion-6:-ms-input-placeholder {
  color: #727683;
}

.emotion-6::placeholder {
  color: #727683;
}

.emotion-6[data-success='true'] {
  border-color: #22674e;
}

.emotion-6[data-error='true'] {
  border-color: #b3144d;
}

.emotion-6[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-6:disabled {
  background: #f3f3f4;
  border-color: #e9eaeb;
  color: #b5b7bd;
}

.emotion-6:disabled::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled::placeholder {
  color: #b5b7bd;
}

.emotion-6:not(:disabled):hover {
  border-color: #8c40ef;
}

.emotion-6:not(:disabled):focus {
  outline: none;
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  position: absolute;
  top: 0.75rem;
  right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="emotion-0 emotion-1"
      >
        <label
          class="emotion-2 emotion-3 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
          for="«r0»"
        >
          Test
        </label>
        <div
          class="emotion-4 emotion-5"
        >
          <textarea
            aria-invalid="false"
            class="emotion-6 emotion-7"
            data-error="false"
            data-readonly="false"
            data-success="false"
            id="«r0»"
            name="test"
            rows="3"
          />
          <div
            class="emotion-8 emotion-9"
          />
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`textAreaField > should render correctly generated 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.25rem;
}

.emotion-4 {
  cursor: pointer;
}

.emotion-6 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-8 {
  width: 100%;
  resize: vertical;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border-radius: 0.25rem;
  padding: 0.75rem 0.5rem 0.75rem 1rem;
  padding-right: calc(1.5rem + 300px + 0px);
}

.emotion-8::-webkit-input-placeholder {
  color: #727683;
}

.emotion-8::-moz-placeholder {
  color: #727683;
}

.emotion-8:-ms-input-placeholder {
  color: #727683;
}

.emotion-8::placeholder {
  color: #727683;
}

.emotion-8[data-success='true'] {
  border-color: #22674e;
}

.emotion-8[data-error='true'] {
  border-color: #b3144d;
}

.emotion-8[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-8:disabled {
  background: #f3f3f4;
  border-color: #e9eaeb;
  color: #b5b7bd;
}

.emotion-8:disabled::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-8:disabled::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-8:disabled:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-8:disabled::placeholder {
  color: #b5b7bd;
}

.emotion-8:not(:disabled):hover {
  border-color: #8c40ef;
}

.emotion-8:not(:disabled):focus {
  outline: none;
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  position: absolute;
  top: 0.75rem;
  right: 0.5rem;
}

.emotion-12 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-12 .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="emotion-0 emotion-1"
      >
        <div
          class="emotion-2 emotion-1"
        >
          <label
            class="emotion-4 emotion-5 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            for="«r7»"
          >
            Test
          </label>
          <span
            class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owd uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow1k uv_m4c9ow3c"
          >
            *
          </span>
        </div>
        <div
          class="emotion-6 emotion-7"
        >
          <textarea
            aria-invalid="false"
            class="emotion-8 emotion-9"
            data-error="false"
            data-readonly="false"
            data-success="false"
            id="«r7»"
            name="test"
            rows="3"
          >
            This is an example
          </textarea>
          <div
            class="emotion-10 emotion-11"
          >
            <button
              aria-label="clear value"
              class="uv_e1wcoe0 uv_e1wcoe4 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
              type="button"
            >
              <svg
                class="emotion-12 emotion-13"
                viewBox="0 0 16 16"
              >
                <path
                  d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <button
        class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoeg uv_e1wcoe7 uv_e1wcoel"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`textAreaField > should submit with onSubmitEnter prop 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  cursor: pointer;
}

.emotion-4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-6 {
  width: 100%;
  resize: vertical;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border-radius: 0.25rem;
  padding: 0.75rem 0.5rem 0.75rem 1rem;
  padding-right: calc(1.5rem + 0px + 0px);
}

.emotion-6::-webkit-input-placeholder {
  color: #727683;
}

.emotion-6::-moz-placeholder {
  color: #727683;
}

.emotion-6:-ms-input-placeholder {
  color: #727683;
}

.emotion-6::placeholder {
  color: #727683;
}

.emotion-6[data-success='true'] {
  border-color: #22674e;
}

.emotion-6[data-error='true'] {
  border-color: #b3144d;
}

.emotion-6[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-6:disabled {
  background: #f3f3f4;
  border-color: #e9eaeb;
  color: #b5b7bd;
}

.emotion-6:disabled::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled::placeholder {
  color: #b5b7bd;
}

.emotion-6:not(:disabled):hover {
  border-color: #8c40ef;
}

.emotion-6:not(:disabled):focus {
  outline: none;
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  position: absolute;
  top: 0.75rem;
  right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="emotion-0 emotion-1"
      >
        <label
          class="emotion-2 emotion-3 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
          for="«r3»"
        >
          Test
        </label>
        <div
          class="emotion-4 emotion-5"
        >
          <textarea
            aria-invalid="false"
            class="emotion-6 emotion-7"
            data-error="false"
            data-readonly="false"
            data-success="false"
            id="«r3»"
            name="test"
            rows="3"
          >
            This is an example
          </textarea>
          <div
            class="emotion-8 emotion-9"
          />
        </div>
      </div>
      <button
        class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoeg uv_e1wcoe7 uv_e1wcoel"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;
